2.1.0/_sources/gallery/style_sheets/dark_background.rst.txt


.. _sphx_glr_gallery_style_sheets_dark_background.py:


===========================
Dark background style sheet
===========================

This example demonstrates the "dark_background" style, which uses white for
elements that are typically black (text, borders, etc). Note that not all plot
elements default to colors defined by an rc parameter.





.. image:: /gallery/style_sheets/images/sphx_glr_dark_background_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt


    plt.style.use('dark_background')

    fig, ax = plt.subplots()

    L = 6
    x = np.linspace(0, L)
    ncolors = len(plt.rcParams['axes.prop_cycle'])
    shift = np.linspace(0, L, ncolors, endpoint=False)
    for s in shift:
        ax.plot(x, np.sin(x + s), 'o-')
    ax.set_xlabel('x-axis')
    ax.set_ylabel('y-axis')
    ax.set_title("'dark_background' style sheet")

    plt.show()

**Total running time of the script:** ( 0 minutes  0.026 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: dark_background.py <dark_background.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: dark_background.ipynb <dark_background.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
